; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/sh/rcar/extr_core.c_rsnd_rdai_channels_ctrl.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/sh/rcar/extr_core.c_rsnd_rdai_channels_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsnd_dai = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rsnd_rdai_channels_ctrl(%struct.rsnd_dai* %0, i32 %1) #0 {
  %3 = alloca %struct.rsnd_dai*, align 8
  %4 = alloca i32, align 4
  store %struct.rsnd_dai* %0, %struct.rsnd_dai** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp sgt i32 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.rsnd_dai*, %struct.rsnd_dai** %3, align 8
  %10 = getelementptr inbounds %struct.rsnd_dai, %struct.rsnd_dai* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  br label %11

11:                                               ; preds = %7, %2
  %12 = load %struct.rsnd_dai*, %struct.rsnd_dai** %3, align 8
  %13 = getelementptr inbounds %struct.rsnd_dai, %struct.rsnd_dai* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
